# experiments

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
WorkerPool/: AsyncQueues.cpp  Lock.cpp  WorkerDelegation.cpp  notes.md
assembly/LpfCoeffs/: main.cpp
cpp/: CMakeLists.txt  CMakeLists.vcpkg.txt  vcpkg.json
cpp/misc/: ReinterpretCast.cpp  persistentWorkers.cpp
cpp/rxcpp/FunctionStreams/: main.cpp
cpp/rxcpp/SideEffectTiming/: main.cpp
cpp/ui/: WavePlotterBase.cpp  runtime_link_qt_example.cpp
cpp/zmq/sockets/: main.cpp
misc/: FloatVsDouble.cpp  threadSync.cpp
python/coeff_plotting/: __init__.py  plot_coeffs_by_position.py  plot_coeffs_by_set.py
python/coeff_plotting/lib/: generate_coeffs.py
rxcpp/: main.cpp
rxcpp/FunctionStreams/: main.cpp
rxcpp/OscGen/: OscillatorIndexCalculator.h  WavetableOscillatorMono.h  main.cpp
rxcpp/SideEffectTiming/: notes.md
zmq/sockets/: main.cpp
